Update incorporating results from card survey.

--- a/htdocs/card_support.htm
+++ b/htdocs/card_support.htm
@@ -373,9 +373,10 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
             <p><a href="WinTV-D_Notes.htm">Note</a></p>
           </td>
         </tr>
-        <tr>
+        <tr> 
           <td valign="middle" align="left"> 
-            <p><blockquote>WinTV 401</blockquote>
+            <p> 
+            <blockquote>WinTV 401</blockquote>
           </td>
           <td width="1"><img src="images/spacer.gif" width="1" height="32"></td>
           <td align="center" valign="middle">&nbsp;</td>
@@ -479,6 +480,19 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle"><img src="images/checkgreen.gif" width="22" height="22"></td>
           <td align="center" valign="middle"><img src="images/xred.gif" width="22" height="22"></td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+        </tr>
+        <tr> 
+          <td valign="middle" align="left"> 
+            <p>KWORLD KW-T878</p>
+          </td>
+          <td width="1"><img src="images/spacer.gif" width="1" height="32"></td>
+          <td align="center" valign="middle"><img src="images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle"><img src="images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
@@ -615,16 +629,18 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         </tr>
         <tr> 
           <td valign="middle" align="left"> 
-            <p>MIRO PCTV pro</p>
+            <p>MIRO PCTV Pro</p>
           </td>
           <td width="1"><img src="images/spacer.gif" width="1" height="32"></td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle"><img src="images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle"><img src="images/checkgreen.gif" width="22" height="22"></td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
-          <td align="center" valign="middle">&nbsp;</td>
-          <td align="center" valign="middle">&nbsp;</td>
-          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle"> 
+            <p><a href="Pinnacle_PCTV_Pro_Miro_PCTV_Pro_Notes.htm">Note</a></p>
+          </td>
         </tr>
         <tr> 
           <td valign="middle" align="left"> 
@@ -682,6 +698,21 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         </tr>
         <tr> 
           <td valign="middle" align="left"> 
+            <blockquote>PCTV Pro</blockquote>
+          </td>
+          <td width="1"><img src="images/spacer.gif" width="1" height="32"></td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle"><img src="images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle"><img src="images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle"> 
+            <p><a href="Pinnacle_PCTV_Pro_Miro_PCTV_Pro_Notes.htm">Note</a></p>
+          </td>
+        </tr>
+        <tr> 
+          <td valign="middle" align="left"> 
             <blockquote> 
               <p>StudioTV</p>
             </blockquote>
@@ -700,8 +731,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
             <p>PixelView PlayTV (bt878)</p>
           </td>
           <td width="1"><img src="images/spacer.gif" width="1" height="32"></td>
-          <td align="center" valign="middle">&nbsp;</td>
-          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle"><img src="images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle"><img src="images/checkgreen.gif" width="22" height="22"></td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
@@ -710,7 +741,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         </tr>
         <tr> 
           <td height="23" valign="middle" align="left"> 
-            <p>PixelView PlayTV pro</p>
+            <p>PixelView PlayTV Pro</p>
           </td>
           <td height="23" width="1"><img src="images/spacer.gif" width="1" height="32"></td>
           <td height="23" align="center" valign="middle">&nbsp;</td>
@@ -746,6 +777,19 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <td height="23" align="center" valign="middle">&nbsp;</td>
           <td height="23" align="center" valign="middle">&nbsp;</td>
           <td height="23" align="center" valign="middle">&nbsp;</td>
+        </tr>
+        <tr>
+          <td valign="middle" align="left">
+            <p>Spirit PCI (848)</p>
+          </td>
+          <td width="1"><img src="images/spacer.gif" width="1" height="32"></td>
+          <td align="center" valign="middle"><img src="images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle"><img src="images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
         </tr>
         <tr> 
           <td valign="middle" align="left"> 
