Continued feedback from card survey.

--- a/htdocs/card_support.htm
+++ b/htdocs/card_support.htm
@@ -136,6 +136,21 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
         </tr>
+        <tr>
+          <td valign="middle" align="left">
+            <p>ATI TV Wonder (Stereo)</p>
+          </td>
+          <td width="1"><img src="images/spacer.gif" width="1" height="32"></td>
+          <td align="center" valign="middle"><img src="images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle"><img src="images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">
+            <p><a href="ATI_TV_Wonder_Stereo_Notes.htm">Note</a></p>
+          </td>
+        </tr>
         <tr> 
           <td valign="middle" align="left"> 
             <p>AVEC Intercapture</p>
@@ -212,9 +227,9 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
             <p>Boeder PC Chatcam</p>
           </td>
           <td width="1"><img src="images/spacer.gif" width="1" height="32"></td>
+          <td align="center" valign="middle"><img src="images/checkgreen.gif" width="22" height="22"></td>
           <td align="center" valign="middle">&nbsp;</td>
-          <td align="center" valign="middle">&nbsp;</td>
-          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle"><img src="images/checkgreen.gif" width="22" height="22"></td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle"><img src="images/checkgreen.gif" width="22" height="22"></td>
           <td align="center" valign="middle">&nbsp;</td>
@@ -318,18 +333,20 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
             </blockquote>
           </td>
           <td width="1"><img src="images/spacer.gif" width="1" height="32"></td>
-          <td align="center" valign="middle">&nbsp;</td>
-          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle"><img src="images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle"><img src="images/checkgreen.gif" width="22" height="22"></td>
           <td align="center" valign="middle"><img src="images/checkgreen.gif" width="22" height="22"></td>
           <td align="center" valign="middle"><img src="images/checkgreen.gif" width="22" height="22"></td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
-          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">
+            <p><a href="WinTV-Go_Notes.htm">Note</a></p>
+          </td>
         </tr>
         <tr> 
           <td valign="middle" align="left"> 
             <blockquote> 
-              <p>WinTV-DBX</p>
+              <p>WinTV-DBX (401)</p>
             </blockquote>
           </td>
           <td width="1"><img src="images/spacer.gif" width="1" height="32"></td>
@@ -376,16 +393,18 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         <tr> 
           <td valign="middle" align="left"> 
             <p> 
-            <blockquote>WinTV 401</blockquote>
+            <blockquote>WinTV FM PAL (747)</blockquote>
           </td>
           <td width="1"><img src="images/spacer.gif" width="1" height="32"></td>
-          <td align="center" valign="middle">&nbsp;</td>
-          <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle"><img src="images/checkgreen.gif" width="22" height="22"></td>
           <td align="center" valign="middle"><img src="images/checkgreen.gif" width="22" height="22"></td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">
+            <p><a href="WinTV-FM_PAL_Notes.htm">Note</a></p>
+          </td>
         </tr>
         <tr> 
           <td valign="middle" align="left"> 
@@ -486,7 +505,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         </tr>
         <tr> 
           <td valign="middle" align="left"> 
-            <p>KWORLD KW-T878</p>
+            <p>Kworld TV Capture Card</p>
           </td>
           <td width="1"><img src="images/spacer.gif" width="1" height="32"></td>
           <td align="center" valign="middle"><img src="images/checkgreen.gif" width="22" height="22"></td>
@@ -778,8 +797,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <td height="23" align="center" valign="middle">&nbsp;</td>
           <td height="23" align="center" valign="middle">&nbsp;</td>
         </tr>
-        <tr>
-          <td valign="middle" align="left">
+        <tr> 
+          <td valign="middle" align="left"> 
             <p>Spirit PCI (848)</p>
           </td>
           <td width="1"><img src="images/spacer.gif" width="1" height="32"></td>
