To add Paul as a developer. ;-)

--- a/htdocs/Thanks.htm
+++ b/htdocs/Thanks.htm
@@ -48,7 +48,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         <li>A big debt a gratitude is due to Mark Rejhon for his 3:2 algorithm 
           and his help testing, promoting dTV but particularly for his vision 
           and his refusal to accept second best.</li>
-        <li>Thanks to Paul Samblanet, who contributed the aspect ratio control 
+        <li>Thanks to Michael Samblanet, who contributed the aspect ratio control 
           code.</li>
         <li>Thanks to Daniel Schmelzer for his hard work creating and updating 
           the website. Love the logo!&nbsp;</li>
