Further card additions.

--- a/htdocs/Thanks.htm
+++ b/htdocs/Thanks.htm
@@ -57,12 +57,12 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         <li>Thanks to Tom Barry for his implementation of triple buffering and 
           his synchronization fix, as well as his contribution of low-level user 
           manipulation of the bt chipset.</li>
-        <li>Thanks to Yvon Quere and Ali for finding bTV and Yvon for creating 
-          and updating the FAQ.</li>
+        <li>Thanks to Yvon Quere and Ali for finding, using and promoting bTV 
+          and Yvon for creating and updating the FAQ.</li>
         <li>Thanks to Jason Castle for updating the todo and bugs pages.</li>
         <li>Thanks to everybody on the deinterlace project mailing list.</li>
-        <li>Thanks to Borg, creator of bTV, for writing the first ever computer 
-          deinterlacing program--the inspiration for this project.</li>
+        <li>Thanks to Borg, creator of bTV, for writing the first ever intelligent 
+          computer deinterlacing program--the inspiration for this project.</li>
         <li>Thanks to all at the AVSForums for your encouragement and help. The 
           HTPC forum is easily the best group on the internet.</li>
         <li>Thanks to the authors of VirtualDub for the the PAL detection algorithm.</li>
