--- a/htdocs/card_support.htm
+++ b/htdocs/card_support.htm
@@ -136,8 +136,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
         </tr>
-        <tr>
-          <td valign="middle" align="left">
+        <tr> 
+          <td valign="middle" align="left"> 
             <p>ATI TV Wonder (Stereo)</p>
           </td>
           <td width="1"><img src="images/spacer.gif" width="1" height="32"></td>
@@ -147,7 +147,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
-          <td align="center" valign="middle">
+          <td align="center" valign="middle"> 
             <p><a href="ATI_TV_Wonder_Stereo_Notes.htm">Note</a></p>
           </td>
         </tr>
@@ -315,6 +315,56 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         </tr>
         <tr> 
           <td valign="middle" align="left"> 
+            <p>Guillemot PCI TV Cards</p>
+          </td>
+          <td width="1"><img src="images/spacer.gif" width="1" height="32"></td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+        </tr>
+        <tr> 
+          <td valign="middle" align="left"> 
+            <blockquote>Guillemot Maxi TV Video PCI</blockquote>
+          </td>
+          <td width="1"><img src="images/spacer.gif" width="1" height="32"></td>
+          <td align="center" valign="middle" colspan="7"> 
+            <p>This Card Will Not Work With dTV -- It Contains the Zoran Chipset</p>
+          </td>
+        </tr>
+        <tr> 
+          <td valign="middle" align="left"> 
+            <p>
+            <blockquote>Guillemot Maxi TV PCI 2</blockquote>
+          </td>
+          <td width="1"><img src="images/spacer.gif" width="1" height="32"></td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle"><img src="images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+        </tr>
+        <tr> 
+          <td valign="middle" align="left"> 
+            <p>
+            <blockquote>Guillemot maxi video 3</blockquote>
+          </td>
+          <td width="1"><img src="images/spacer.gif" width="1" height="32"></td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+        </tr>
+        <tr> 
+          <td valign="middle" align="left"> 
             <p>Hauppauge PCI TV Cards</p>
           </td>
           <td width="1"><img src="images/spacer.gif" width="1" height="32"></td>
@@ -339,7 +389,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <td align="center" valign="middle"><img src="images/checkgreen.gif" width="22" height="22"></td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
-          <td align="center" valign="middle">
+          <td align="center" valign="middle"> 
             <p><a href="WinTV-Go_Notes.htm">Note</a></p>
           </td>
         </tr>
@@ -402,7 +452,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
-          <td align="center" valign="middle">
+          <td align="center" valign="middle"> 
             <p><a href="WinTV-FM_PAL_Notes.htm">Note</a></p>
           </td>
         </tr>
@@ -554,6 +604,19 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
+        </tr>
+        <tr>
+          <td height="23" valign="middle" align="left">
+            <p>LifeView FlyVideo 98</p>
+          </td>
+          <td height="23" width="1"><img src="images/spacer.gif" width="1" height="32"></td>
+          <td height="23" align="center" valign="middle">&nbsp;</td>
+          <td height="23" align="center" valign="middle">&nbsp;</td>
+          <td height="23" align="center" valign="middle">&nbsp;</td>
+          <td height="23" align="center" valign="middle">&nbsp;</td>
+          <td height="23" align="center" valign="middle">&nbsp;</td>
+          <td height="23" align="center" valign="middle">&nbsp;</td>
+          <td height="23" align="center" valign="middle">&nbsp;</td>
         </tr>
         <tr> 
           <td height="23" valign="middle" align="left"> 
