--- a/htdocs/developers.htm
+++ b/htdocs/developers.htm
@@ -60,13 +60,14 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         the latest source zipped. The source compiles under MS Visual C++. The 
         application has grown out of the GPL code base of MultiDec and MoreTV, 
         two cable descrambling programs.&nbsp; By combining the GPL parts of both 
-        and extending them both I have been able to create a new legal totally 
+        and extending them both, John Adcock was able to create a new legal totally 
         open source project.</p>
       <p>The individual source files are in the&nbsp;<a href="http://cvs.sourceforge.net/cgi-bin/cvsweb.cgi?cvsroot=deinterlace">CVS 
         Repository</a>.&nbsp; To get check-out and check-in access, you will need 
-        to get cvs and to make a few configuration changes see <a href="http://sfdocs.sourceforge.net/sfdocs/display_topic.php?topicid=19">Win32-CVS-SSH 
-        Guide</a> and <a href="http://sfdocs.sourceforge.net/sfdocs/display_topic.php?topicid=20">Win32-CVS-SSH 
-        HowTo</a> for more details.</p>
+        to get cvs and to make a few configuration changes see the <a href="CVS_Instructions.htm">dTV 
+        CVS Instructions</a> for more details. Please e-mail your Sourceforge 
+        username to the <a href="mailto:dschmelzer@hotmail.com">webmaster</a> 
+        to be added to the project and for CVS check-out and check-in permission.</p>
       <h2><br>
         Sourceforge Project Developer Links</h2>
       <p><a href="http://sourceforge.net/project/?group_id=7420">Main Project 
@@ -85,8 +86,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         as well as Teletext and Closed-Captioning.</p>
       <p>An explanation of the <a href="IniFile.htm">options available</a> in 
         the dTV.ini file.</p>
-      <p>Conexant's <a href="distributions/btregtools.zip">Bt 8x8 register tool</a> 
-        for Windows 9x</p>
+      <p>Conexant's <a href="distributions/btregtools.zip">Bt 8x8 register tools</a> 
+        for Windows 9x.</p>
       <p></p>
       <h2></h2>
       <h2> <br>
@@ -100,20 +101,27 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         Driver Project</a></p>
       <h2><br>
         AVScience Threads</h2>
-      <p><a href="http://www.avsforum.com/ubb/Forum12/HTML/004188.html">dTV 1.6 
-        Experimential Beta</a> (AVS Forum)</p>
-      <p><a href="http://www.avsforum.com/ubb/Forum12/HTML/004067.html">dTV 1.5 
-        - Auto Pulldown detect & better video deinterlacing</a> (AVS Forum)</p>
-      <p> <a href="http://www.avsforum.com/ubb/Forum12/HTML/004004.html">dTV Version 
-        1.4</a> (AVS Forum)</p>
-      <p> <a href="http://www.avsforum.com/ubb/Forum12/HTML/003921.html">dTV New 
+      <p><a href="http://www.avsforum.com/ubb/Forum12/HTML/005313.html">dTV 2.0.0 
+        Release Thread</a> (AVS Forum)<br>
+        <a href="http://www.avsforum.com/ubb/Forum12/HTML/005129.html">ANNOUNCEMENT: 
+        dTV 1.9 software video processor is now OUT</a> (AVS Forum)<br>
+        <a href="http://www.avsforum.com/ubb/Forum12/HTML/004448.html">NEW VERSION: 
+        dTV 1.8 released</a> (AVS Forum)<br>
+        <a href="http://www.avsforum.com/ubb/Forum12/HTML/004360.html">dTV 1.7 
+        Experimental Beta </a>(AVS Forum)<br>
+        <a href="http://www.avsforum.com/ubb/Forum12/HTML/004188.html">dTV 1.6 
+        Experimential Beta</a> (AVS Forum)<br>
+        <a href="http://www.avsforum.com/ubb/Forum12/HTML/004067.html">dTV 1.5 
+        - Auto Pulldown detect & better video deinterlacing</a> (AVS Forum)<br>
+        <a href="http://www.avsforum.com/ubb/Forum12/HTML/004004.html">dTV Version 
+        1.4</a> (AVS Forum)<br>
+        <a href="http://www.avsforum.com/ubb/Forum12/HTML/003921.html">dTV New 
         Release Version 1.3</a> (AVS Forum)<br>
-        <a href="http://www.avsforum.com/ubb/Forum12/HTML/003825.html"></a></p>
-      <p><a href="http://www.avsforum.com/ubb/Forum12/HTML/003825.html">New version 
-        of dTV - now with video souce deinterlacing</a></p>
-      <p><a href="http://www.avsforum.com/ubb/Forum12/HTML/003790.html">First 
-        Version of NTSC/PAL TV deinterlacing program</a></p>
-      <p><a href="http://www.avsforum.com/ubb/Forum12/HTML/000071.html">Marc Rejhon's 
+        <a href="http://www.avsforum.com/ubb/Forum12/HTML/003825.html">New version 
+        of dTV - now with video souce deinterlacing</a><br>
+        <a href="http://www.avsforum.com/ubb/Forum12/HTML/003790.html">First Version 
+        of NTSC/PAL TV deinterlacing program</a><br>
+        <a href="http://www.avsforum.com/ubb/Forum12/HTML/000071.html">Marc Rejhon's 
         Algorithm for 3-2 Pulldown Deinterlacing</a></p>
       <h2><br>
         Other Downloads</h2>
