--- a/htdocs/Authors.htm
+++ b/htdocs/Authors.htm
@@ -28,7 +28,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td height="1" width="501"><img src="/images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160"><img src="/images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+    <td width="160"><img src="images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
     <td colspan="2" align="right" valign="bottom">
       <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->dTV 
       Authors&nbsp;<!-- #EndEditable --></b></font></td>
@@ -75,21 +75,29 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           algorithm. In addition, he is the author of the aspect ratio autodetection 
           code which was included in version 1.9.</p>
       </blockquote>
-      <p><br>
-      </p>
-      <h2>Tom Barry</h2>
-      <p> 
+      <h2><br>
+      Tom Barry</h2>
       <blockquote>Tom contributed the triple buffering code and synchronization 
         fixes for version 2.0.0. Also, he has authored several MMX assembly optimizations 
         to the video deinterlace mode and added the advanced Brooktree/Conexant 
         chipset settings menu, both of which were included in version 1.9.</blockquote>
-      <br>
-      <h2> Michael Samblanet</h2>
+      <h2> <br>
+ Michael Samblanet</h2>
       <blockquote> 
-        <p>Michael is continuing to upgrade his aspect ratio control code.</p>
+        <p>Michael is continuing to upgrade his aspect ratio control code.<br>
+        </p>
       </blockquote>
-      <h2>&nbsp; </h2>
-      <p></p>
+      <h2>Michael Eskin </h2>
+      <blockquote>
+        <p>An engineer working at Conextant Systems Inc., the makers of the 8x8
+        series chips that dTV runs on.&nbsp; He basically meditates peace
+        between the dTV software and the 8x8 video capture hardware.&nbsp; When
+        any of us fails on a nasty 8x8 issue, he takes over and gets the job
+        done from time to time.&nbsp; One of his several valuable contributions
+        include a bug fix to make Macrovision-encoded sources watchable in dTV,
+        without purple-lines interference.</p>
+      <p>&nbsp;</p>
+      </blockquote>
       <p>Please see the <a href="Thanks.htm">Thanks</a> file for an incomplete 
         list of the many others who have contributed time and effort.</p>
       <!-- #EndEditable --></td>
@@ -107,15 +115,14 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr> 
     <td colspan="3"> 
-      <div align="center"><a href="/" class="bottommenu">home</a> | <a href="/about.htm" class="bottommenu">about</a> 
-        | <a href="/Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="/screenshots.htm" class="bottommenu">screenshots</a> 
-        | <a href="/News.htm" class="bottommenu">news</a> | <a href="/Thanks.htm" class="bottommenu"></a><a href="/downloads.htm" class="bottommenu">download</a> 
-        | <a href="/Reviews.htm" class="bottommenu"></a><a href="/Authors.htm" class="bottommenu">authors</a> 
-        | <a href="/Thanks.htm" class="bottommenu">thanks</a> <br>
-        <a href="/installation.htm" class="bottommenu">setup</a> | <a href="/keyboard.htm" class="bottommenu">keyboard 
-        shortcuts </a> | <a href="http://sourceforge.net/mail/?group_id=7420" class="bottommenu">mailing 
-        list</a> | <a href="/FAQ.htm" class="bottommenu">faq</a> | <a href="/developers.htm" class="bottommenu">developers</a> 
-        | <a href="/Links.htm" class="bottommenu">links</a></div>
+      <div align="center"><a class="bottommenu" href="index.php">home</a> | <a href="about.htm" class="bottommenu">about</a>
+        | <a href="Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="screenshots/index.htm" class="bottommenu">screenshots</a>
+        | <a href="downloads.htm" class="bottommenu">download</a> | <a href="Authors.htm" class="bottommenu">authors</a>
+        | <a href="Thanks.htm" class="bottommenu">thanks</a> <br>
+        <a href="setup/index.htm" class="bottommenu">setup</a> | <a href="keyboard.htm" class="bottommenu">keyboard
+        shortcuts </a>| <a href="http://sourceforge.net/mail/?group_id=7420" class="bottommenu">mailing
+        list</a> | <a href="FAQ.htm" class="bottommenu">faq</a> | <a href="developers.htm" class="bottommenu">developers</a>
+        | <a href="Links.htm" class="bottommenu">links</a></div>
     </td>
   </tr>
 </table>
