--- a/htdocs/FAQ.htm
+++ b/htdocs/FAQ.htm
@@ -30,7 +30,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr> 
     <td width="160" rowspan="2"><img src="/images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
-    <td colspan="2" align="right" valign="top"> <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><font size="1"><!-- #BeginEditable "Language%20Selector" --><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><font size="1"><a href="/FrenchFAQ.htm"><img src="images/selector-french.gif" width="50" height="18" border="0"></a><img src="images/selector-divider.gif" width="10" height="17"><a href="/FAQ.htm"><img src="images/selector-english.gif" width="45" height="18" border="0"></a></font></b></font><!-- #EndEditable --></font></b></font></td>
+    <td colspan="2" align="right" valign="top"> <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><font size="1"><!-- #BeginEditable "Language%20Selector" --><font size="1"><a href="francais/FAQ.htm"><img src="images/selector-french.gif" width="50" height="18" border="0"></a><img src="images/selector-divider.gif" width="10" height="17"><a href="FAQ.htm"><img src="images/selector-english.gif" width="45" height="18" border="0"></a></font><!-- #EndEditable --></font></b></font></td>
   </tr>
   <tr> 
     <td colspan="2" align="right" valign="bottom"><font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->FAQ&nbsp;<!-- #EndEditable -->&nbsp;</b></font></td>
@@ -112,7 +112,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <p> <br>
       <h3>Thanks to those various helping hands</h3>
       <p> 
-      <p>See <a href="/MultiDec_ReadMe.txt"> MultiDec_ReadMe.txt</a> for a list 
+      <p>See <a href="MultiDec_ReadMe.txt"> MultiDec_ReadMe.txt</a> for a list 
         of thanks for the project dTV was based upon.</p>
       <ol>
         <li>A big debt a gratitude is due to Mark Rejhon for his 3:2 algorithm 
@@ -144,7 +144,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <p> 
       <h2>Should I use dTV to deinterlace the output from my set-top player ?</h2>
       <p> While it's feasible and works quite fine (see the "dTV WinDVD challenge" 
-        in the <a href="/screenshots.htm">screenshots</a> section), home theater 
+        in the <a href="screenshots/index.htm">screenshots</a> section), home theater 
         PC's have shown the best results while using dvd decoding software along 
         with a dvd-rom and a modern graphic card.<br>
         However, it's been used quite often for test purposes (testing of grab 
@@ -180,7 +180,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <p> Yes you can. dTV is being developed mainly by people using it as an 
         analog source scaler for their projector and they prefer for sure using 
         dTV from their remote on the sofa rather than from their desk ;-) 
-      <p> dTV is thus filled with <a href="/keyboard.htm">keyboard shortcuts</a> 
+      <p> dTV is thus filled with <a href="keyboard.htm">keyboard shortcuts</a> 
         for all main options so that you can do everything quickly.<br>
         More, we suggest the use of <a href="http://www.stack.nl/~stilgar/windoze/girder.html">Girder</a> 
         from Ron Bessems as the application of choice for remote controlling your 
@@ -232,7 +232,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         <li>Guillemot maxi video 3 <a href="http://fr.guillemot.com/brand/gamme/video/mtvvidp3/mtvvidpci3.html">http://fr.guillemot.com/brand/gamme/video/mtvvidp3/mtvvidpci3.html</a> 
         <li>The Pinnacle Studio PCTV <a href="http://www.pinnaclesys.com/ProductPage.asp?Product_ID=6">http://www.pinnaclesys.com/ProductPage.asp?Product_ID=6</a> 
       </ul>
-      <p>Take a look at the <a href="/card_support.htm">card list</a>. This will 
+      <p>Take a look at the <a href="card-support/index.htm">card list</a>. This will 
         never be complete so feel free to drop us an email reporting your experience 
         with dTV and your card. </p>
       <p> <i>This list is originally based on the linux bttv driver on which the 
@@ -263,6 +263,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <h1>Troubleshooting</h1>
       <p> <a name="PURPLESTRIPES"></a> 
       <h2>What is this "purple stripes" issue ?</h2>
+      <p> <i><b>UPDATE: </b>Michael Eskin of Conexant Systems Inc. has fixed
+      this issue with an adjustable INI file setting, as of dTV version 2.0.1</i>
       <p> When feeding some analog sources to the combination grab card/dTV, some 
         numerous horizontal colored lines appear on the image. 
       <p> See <a href="/images/Mummy_MacrovisionOn.jpg">this picture</a> where 
@@ -323,7 +325,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <p> More and more people are giving dTV a try. Why wouldn't you ? <br>
         We'd like to know about your experience with it. What does (not) work 
         ? What can be improved, what feature you'd like. Every feedback is useful. 
-      <p> Please have a look, when reporting a problem, to the <a href="/Bugs.htm">bug 
+      <p> Please have a look, when reporting a problem, to the <a href="http://sourceforge.net/mail/?group_id=7420">mailing 
         list</a>. Report also the hardware you're using, especially video card 
         and grab card. 
       <p> 
@@ -333,9 +335,9 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         lot of features in it that are simple or that could be easily implemented 
         without knowing anything about 3:2 pulldown detection. 
       <p> If you've got an idea, or feel like to trying to implement something 
-        that is already in the <a href="/Todo.htm">Todo list</a>, contact the 
+        that is already in the <a href="Todo.htm">Todo list</a>, contact the 
         authors and join the <a href="http://sourceforge.net/mail/?group_id=7420">mailing 
-        list</a>. All relevant info to get you started is on the <a href="/developers.htm">developers 
+        list</a>. All relevant info to get you started is on the <a href="developers.htm">developers 
         page</a>. 
       <p> 
       <!-- #EndEditable --></td>
@@ -353,15 +355,14 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr> 
     <td colspan="3"> 
-      <div align="center"><a href="/" class="bottommenu">home</a> | <a href="/about.htm" class="bottommenu">about</a> 
-        | <a href="/Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="/screenshots.htm" class="bottommenu">screenshots</a> 
-        | <a href="/News.htm" class="bottommenu">news</a> | <a href="/Thanks.htm" class="bottommenu"></a><a href="/downloads.htm" class="bottommenu">download</a> 
-        | <a href="/Reviews.htm" class="bottommenu"></a><a href="/Authors.htm" class="bottommenu">authors</a> 
-        | <a href="/Thanks.htm" class="bottommenu">thanks</a> <br>
-        <a href="/installation.htm" class="bottommenu">setup</a> | <a href="/keyboard.htm" class="bottommenu">keyboard 
-        shortcuts </a> | <a href="http://sourceforge.net/mail/?group_id=7420" class="bottommenu">mailing 
-        list</a> | <a href="/FAQ.htm" class="bottommenu">faq</a> | <a href="/developers.htm" class="bottommenu">developers</a> 
-        | <a href="/Links.htm" class="bottommenu">links</a></div>
+      <div align="center"><a class="bottommenu" href="index.php">home</a> | <a href="about.htm" class="bottommenu">about</a>
+        | <a href="Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="screenshots/index.htm" class="bottommenu">screenshots</a>
+        | <a href="downloads.htm" class="bottommenu">download</a> | <a href="Authors.htm" class="bottommenu">authors</a>
+        | <a href="Thanks.htm" class="bottommenu">thanks</a> <br>
+        <a href="setup/index.htm" class="bottommenu">setup</a> | <a href="keyboard.htm" class="bottommenu">keyboard
+        shortcuts </a>| <a href="http://sourceforge.net/mail/?group_id=7420" class="bottommenu">mailing
+        list</a> | <a href="FAQ.htm" class="bottommenu">faq</a> | <a href="developers.htm" class="bottommenu">developers</a>
+        | <a href="Links.htm" class="bottommenu">links</a></div>
     </td>
   </tr>
 </table>
