--- a/htdocs/Todo.htm
+++ b/htdocs/Todo.htm
@@ -28,7 +28,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td height="1" width="501"><img src="/images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160"><img src="/images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+    <td width="160"><img src="images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
     <td colspan="2" align="right" valign="bottom">
       <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->dTV Todo &nbsp;
 <!-- #EndEditable --></b></font></td>
@@ -42,10 +42,12 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" -->
 <p>Below is an evolving list of feature requests extracted from
-user and developer feedback as of 10/02/00:&nbsp;</p>/
+user and developer feedback as of 10/02/00:</p>
+<p>NOTICE: At least one of these bugs may have been fixed since the date
+indicated above, check the source code or the mailing list to verify.</p>
 
 <ol>
-<li>Fix all <a href="Bugs_108.htm">bugs</a>, especially
+<li>Fix all <a href="bugs/Bugs_108.htm">bugs</a>, especially
 tearing.</li>
 
 <li>Allow ability to access menu options through right mouse
@@ -175,7 +177,7 @@ it won't.</p>
 
 </li>
 
-<li>Integrate Mark Rejhon's aspect ratio control&hellip;we can wish
+<li>[DONE] Integrate Mark Rejhon's aspect ratio control&hellip;we can wish
 cant we :-)</li>
 </ol>
 
@@ -197,15 +199,14 @@ feedback at the AVScience Forum and our developer mailing list!</p>
   </tr>
   <tr> 
     <td colspan="3"> 
-      <div align="center"><a href="/" class="bottommenu">home</a> | <a href="/about.htm" class="bottommenu">about</a> 
-        | <a href="/Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="/screenshots.htm" class="bottommenu">screenshots</a> 
-        | <a href="/News.htm" class="bottommenu">news</a> | <a href="/Thanks.htm" class="bottommenu"></a><a href="/downloads.htm" class="bottommenu">download</a> 
-        | <a href="/Reviews.htm" class="bottommenu"></a><a href="/Authors.htm" class="bottommenu">authors</a> 
-        | <a href="/Thanks.htm" class="bottommenu">thanks</a> <br>
-        <a href="/installation.htm" class="bottommenu">setup</a> | <a href="/keyboard.htm" class="bottommenu">keyboard 
-        shortcuts </a> | <a href="http://sourceforge.net/mail/?group_id=7420" class="bottommenu">mailing 
-        list</a> | <a href="/FAQ.htm" class="bottommenu">faq</a> | <a href="/developers.htm" class="bottommenu">developers</a> 
-        | <a href="/Links.htm" class="bottommenu">links</a></div>
+      <div align="center"><a class="bottommenu" href="index.php">home</a> | <a href="about.htm" class="bottommenu">about</a>
+        | <a href="Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="screenshots/index.htm" class="bottommenu">screenshots</a>
+        | <a href="downloads.htm" class="bottommenu">download</a> | <a href="Authors.htm" class="bottommenu">authors</a>
+        | <a href="Thanks.htm" class="bottommenu">thanks</a> <br>
+        <a href="setup/index.htm" class="bottommenu">setup</a> | <a href="keyboard.htm" class="bottommenu">keyboard
+        shortcuts </a>| <a href="http://sourceforge.net/mail/?group_id=7420" class="bottommenu">mailing
+        list</a> | <a href="FAQ.htm" class="bottommenu">faq</a> | <a href="developers.htm" class="bottommenu">developers</a>
+        | <a href="Links.htm" class="bottommenu">links</a></div>
     </td>
   </tr>
 </table>
