--- a/htdocs/developers.htm
+++ b/htdocs/developers.htm
@@ -28,7 +28,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td height="1" width="501"><img src="/images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160"><img src="/images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+    <td width="160"><img src="images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
     <td colspan="2" align="right" valign="bottom">
       <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->Developers&nbsp;<!-- #EndEditable --></b></font></td>
   </tr>
@@ -50,8 +50,10 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         Documentation</a> to get started on dTV development and then introduce 
         yourself to the <a href="http://sourceforge.net/mail/?group_id=7420">mailing 
         list</a>.</p>
-      <p>Please refer to the <a href="Bugs_108.htm">bugs</a> and <a href="Todo.htm">Todo</a> 
-        pages for the current task list. If you think that you can take on a part 
+      <p>Please refer to the <a href="bugs/Bugs_108.htm">bugs</a> and <a href="Todo.htm">Todo</a> 
+        pages for the current task list (Note, these files may be outdated by
+      the time you read this page.&nbsp; It's recommended to join the mailing
+      list to keep yourself up to date!). If you think that you can take on a part 
         of one of these tasks, everyone on the mailing list would love to hear 
         from you.</p>
       <h2></h2>
@@ -79,7 +81,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         Deinterlace Project Developer Resources</h2>
       <p>Mark Rejhon's <a href="32Spec.htm">Spec of His 3:2 Pulldown Algorithm</a>. 
       </p>
-      <p>John Adcock's <a href="PALMovie.htm">PALMovie deinterlace plugin</a> 
+      <p>John Adcock's <a href="palmovie/index.htm">PALMovie deinterlace plugin</a> 
         for bTV.</p>
       <p>A <a href="http://www.video-demystified.com/mm/tutor/ch08.pdf">chapter 
         from Video Demystified</a> dealing with the PAL, NTSC, and SECAM standards 
@@ -142,15 +144,14 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr> 
     <td colspan="3"> 
-      <div align="center"><a href="/" class="bottommenu">home</a> | <a href="/about.htm" class="bottommenu">about</a> 
-        | <a href="/Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="/screenshots.htm" class="bottommenu">screenshots</a> 
-        | <a href="/News.htm" class="bottommenu">news</a> | <a href="/Thanks.htm" class="bottommenu"></a><a href="/downloads.htm" class="bottommenu">download</a> 
-        | <a href="/Reviews.htm" class="bottommenu"></a><a href="/Authors.htm" class="bottommenu">authors</a> 
-        | <a href="/Thanks.htm" class="bottommenu">thanks</a> <br>
-        <a href="/installation.htm" class="bottommenu">setup</a> | <a href="/keyboard.htm" class="bottommenu">keyboard 
-        shortcuts </a> | <a href="http://sourceforge.net/mail/?group_id=7420" class="bottommenu">mailing 
-        list</a> | <a href="/FAQ.htm" class="bottommenu">faq</a> | <a href="/developers.htm" class="bottommenu">developers</a> 
-        | <a href="/Links.htm" class="bottommenu">links</a></div>
+      <div align="center"><a class="bottommenu" href="index.php">home</a> | <a href="about.htm" class="bottommenu">about</a>
+        | <a href="Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="screenshots/index.htm" class="bottommenu">screenshots</a>
+        | <a href="downloads.htm" class="bottommenu">download</a> | <a href="Authors.htm" class="bottommenu">authors</a>
+        | <a href="Thanks.htm" class="bottommenu">thanks</a> <br>
+        <a href="setup/index.htm" class="bottommenu">setup</a> | <a href="keyboard.htm" class="bottommenu">keyboard
+        shortcuts </a>| <a href="http://sourceforge.net/mail/?group_id=7420" class="bottommenu">mailing
+        list</a> | <a href="FAQ.htm" class="bottommenu">faq</a> | <a href="developers.htm" class="bottommenu">developers</a>
+        | <a href="Links.htm" class="bottommenu">links</a></div>
     </td>
   </tr>
 </table>
