--- a/htdocs/downloads.htm
+++ b/htdocs/downloads.htm
@@ -28,7 +28,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td height="1" width="501"><img src="/images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160"><img src="/images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+    <td width="160"><img src="images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
     <td colspan="2" align="right" valign="bottom">
       <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->Download&nbsp;<!-- #EndEditable --></b></font></td>
   </tr>
@@ -40,8 +40,18 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
+      <p>Version 2.0.1&#151;<b>Experimental</b>&#151;[<a href="distributions/dTV201exe.zip">Binary
+      Zipped</a>] [<a href="distributions/dTV201src.zip">Source Zipped</a>]<br>
+      &nbsp;&nbsp;&nbsp;&nbsp; Numerous changes by Michael of Conexant Systems, Inc.<br>
+      &nbsp;&nbsp;&nbsp;&nbsp; Bug fixed - Occasional combing artifacts during commercials/music videos<br>
+      &nbsp;&nbsp;&nbsp;&nbsp; Bug fixed - Macrovision Purple Lines Fix!  Adjustable via INI file.<br>
+      &nbsp;&nbsp;&nbsp;&nbsp; Onscreen Display Support<br>
+      &nbsp;&nbsp;&nbsp;&nbsp; Better Channel Search Support<br>
+      &nbsp;&nbsp;&nbsp;&nbsp; Better Channel List Functionality&nbsp;<br>
+      &nbsp;&nbsp;&nbsp;&nbsp; New optional blended deinterlace algorithm
+      </p>
       <p>Version 2.0.0&#151;<b>Experimental</b>&#151;[<a href="distributions/dTV200exe.zip">Binary 
-        Zipped</a>] [<a href="distributions/dTV200src.zip">Source Zipped</a>] [<a href="dTV_Readme200.htm">README</a>]<br>
+        Zipped</a>] [<a href="distributions/dTV200src.zip">Source Zipped</a>] [<a href="readme/dTV_Readme200.htm">README</a>]<br>
       &nbsp;&nbsp;&nbsp;&nbsp; Bug fixed - Tearing is gone at all refresh rates!<br>
       &nbsp;&nbsp;&nbsp;&nbsp; Bug fixed - Error message no longer pops up if
       you resize video window too small.<br>
@@ -70,7 +80,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       moving images<br>
       <br>
         Version 1.9&#151;<b>Stable</b>&#151;[<a href="distributions/dTV19exe.zip">Binary 
-        Zipped</a>] [<a href="distributions/dTV19src.zip">Source Zipped</a>] [<a href="dTV_Readme109.htm">README</a>]<br>
+        Zipped</a>] [<a href="distributions/dTV19src.zip">Source Zipped</a>] [<a href="readme/dTV_Readme109.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Automatic aspect ratio detection!<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Slightly less dropped frames on slower systems<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Debug logfile dTV.txt disabled by default<br>
@@ -79,11 +89,11 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         &nbsp;&nbsp;&nbsp;&nbsp; Minor simplifications to User Interface<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Better brightness/contrast/color defaults 
         for NTSC (majority of users)<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Advanced Video Flags configuration dialog 
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Advanced Video Flags configuration dialog
       </p>
       <p>Version 1.8&#151;<b>Stable</b>&#151;[<a href="distributions/dTV18exe.zip">Binary 
         Zipped</a>] [<a href="distributions/dTV18src.zip">Source Zipped</a>] 
-        [<a href="dTV_Readme108.htm">README</a>]<br>
+        [<a href="readme/dTV_Readme108.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Aspect ratio control simplified and made 
         more intuitive<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Easier hotkeys for common aspect ratios 
@@ -97,11 +107,11 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         changes in certain NTSC movie<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;material where 3:2 pulldown 
         sequence changes<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Minor code cleanup<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Minor code cleanup
       </p>
-      <p>Version 1.7 &#151;<b>Stable</b>&#151;[<a href="/distributions/dTV17exe.zip">Binary 
-        Zipped</a>] [<a href="/distributions/dTV17src.zip">Source Zipped</a>] 
-        [<a href="dTV_Readme106.htm">README</a>]<br>
+      <p>Version 1.7 &#151;<b>Stable</b>&#151;[<a href="distributions/dTV17exe.zip">Binary 
+        Zipped</a>] [<a href="distributions/dTV17src.zip">Source Zipped</a>] 
+        [<a href="readme/dTV_Readme106.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Integrated Michael's aspect ratio control 
         code<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Many bits and pieces of source code cleanup 
@@ -111,10 +121,10 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Documentation (.HTM files) moved into separate 
         subdirectory<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Note: No TV tuner card related bugfixes 
-        over 1.6; see <a href="Bugs_107.htm">Known Bugs</a> for current list<br>
+        over 1.6; see <a href="bugs/Bugs_107.htm">Known Bugs</a> for current list
       </p>
-      <p>Version 1.6 Beta 4&#151;<b>Stable</b>&#151;[<a href="/dTV16b4.zip">Binary 
-        Zipped</a>] [<a href="/dTV16src.zip">Source Zipped</a>] [<a href="dTV_Readme106.htm">README</a>]<br>
+      <p>Version 1.6 Beta 4&#151;<b>Superceded</b>&#151;[<a href="distributions/dTV16b4.zip">Binary 
+        Zipped</a>] [<a href="distributions/dTV16src.zip">Source Zipped</a>] [<a href="readme/dTV_Readme106.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Auto detect enabled by default<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Video format (e.g., NTSC) automatically 
         selected upon selection of<br>
@@ -123,36 +133,36 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;More reliable config defaults for 3/2 pulldown 
         detection<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Changes to synchronization code<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Note: See <a href="Bugs_106b4.htm">Known 
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Note: See <a href="bugs/Bugs_106b4.htm">Known 
         Bugs</a> for additional details</p>
-      <p>Version 1.5&#151;<b>Stable</b>&#151;[<a href="http://deinterlace.sourceforge.net/dTV15exe.zip">Binary 
-        Zipped</a>] [<a href="http://deinterlace.sourceforge.net/dTV15src.zip">Source 
-        Zipped</a>] [<a href="dTV_Readme105.htm">README</a>]<br>
+      <p>Version 1.5&#151;<b>Superceded</b>&#151;[<a href="distributions/dTV15exe.zip">Binary 
+        Zipped</a>] [<a href="distributions/dTV15src.zip">Source 
+        Zipped</a>] [<a href="readme/dTV_Readme105.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Auto 3:2 pulldown detect for NTSC<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Auto 2:2 pulldown detect for PAL (not very 
         reliable needs some tweaking)<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Adaptive video deinterlacing<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Note: Teletext and CC broken</p>
-      <p>Version 1.4&#151;<b>Stable</b>&#151;[<a href="/dTV14exe.zip">Binary Zipped</a>] 
-        [<a href="/dTV14src.zip">Source Zipped</a>] [<a href="dTV_Readme104.htm">README</a>]<br>
+      <p>Version 1.4&#151;<b>Superceded</b>&#151;[<a href="distributions/dTV14exe.zip">Binary Zipped</a>] 
+        [<a href="distributions/dTV14src.zip">Source Zipped</a>] [<a href="readme/dTV_Readme104.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Fix for overlays in low colour depths<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Still capture in ppm format<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Overscan support</p>
-      <p>Version 1.3 &#151;<b>Superceded</b>&#151; [<a href="/dTv13aexe.zip">Binary 
-        Zipped</a>] [<a href="/dTV13asrc.zip">Source Zipped</a>] [<a href="dTV_Readme103.htm">README</a>]<br>
+      <p>Version 1.3 &#151;<b>Superceded</b>&#151; [<a href="distributions/dTv13aexe.zip">Binary 
+        Zipped</a>] [<a href="distributions/dTV13asrc.zip">Source Zipped</a>] [<a href="readme/dTV_Readme103.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Code clean up<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Better card support<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sound bugs fixed<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Changed overlay colour<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Open Source video deinterlace version 1</p>
-      <p>Version 1.2 &#151;<b>Stable</b>&#151; [<a href="/dTVex12.zip">Binary 
-        Zipped</a>] [<a href="dTV_Readme102.htm">README</a>]<br>
+      <p>Version 1.2 &#151;<b>Superceded</b>&#151; [<a href="distributions/dTVex12.zip">Binary 
+        Zipped</a>] [<a href="readme/dTV_Readme102.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Fix for flipping with bTV plug-ins</p>
-      <p>Version 1.1 [<a href="/dTVex11.zip">Binary Zipped</a>] [<a href="dTV_Readme101.htm">README</a>]<br>
+      <p>Version 1.1 [<a href="distributions/dTVex11.zip">Binary Zipped</a>] [<a href="readme/dTV_Readme101.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Support for bTV plugins added<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Full screen support</p>
-      <p>Version 1.0 [<a href="/dTVexe.zip">Binary Zipped</a>] [<a href="/dTVsrc.zip">Source 
-        Zipped</a>] [<a href="dTV_Readme100.htm">README</a>]<br>
+      <p>Version 1.0 [<a href="distributions/dTVexe.zip">Binary Zipped</a>] [<a href="distributions/dTVsrc.zip">Source 
+        Zipped</a>] [<a href="readme/dTV_Readme100.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Original version--support for manual inverse 
         telecine <br>
       </p>
@@ -171,15 +181,14 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr> 
     <td colspan="3"> 
-      <div align="center"><a href="/" class="bottommenu">home</a> | <a href="/about.htm" class="bottommenu">about</a> 
-        | <a href="/Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="/screenshots.htm" class="bottommenu">screenshots</a> 
-        | <a href="/News.htm" class="bottommenu">news</a> | <a href="/Thanks.htm" class="bottommenu"></a><a href="/downloads.htm" class="bottommenu">download</a> 
-        | <a href="/Reviews.htm" class="bottommenu"></a><a href="/Authors.htm" class="bottommenu">authors</a> 
-        | <a href="/Thanks.htm" class="bottommenu">thanks</a> <br>
-        <a href="/installation.htm" class="bottommenu">setup</a> | <a href="/keyboard.htm" class="bottommenu">keyboard 
-        shortcuts </a> | <a href="http://sourceforge.net/mail/?group_id=7420" class="bottommenu">mailing 
-        list</a> | <a href="/FAQ.htm" class="bottommenu">faq</a> | <a href="/developers.htm" class="bottommenu">developers</a> 
-        | <a href="/Links.htm" class="bottommenu">links</a></div>
+      <div align="center"><a class="bottommenu" href="index.php">home</a> | <a href="about.htm" class="bottommenu">about</a>
+        | <a href="Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="screenshots/index.htm" class="bottommenu">screenshots</a>
+        | <a href="downloads.htm" class="bottommenu">download</a> | <a href="Authors.htm" class="bottommenu">authors</a>
+        | <a href="Thanks.htm" class="bottommenu">thanks</a> <br>
+        <a href="setup/index.htm" class="bottommenu">setup</a> | <a href="keyboard.htm" class="bottommenu">keyboard
+        shortcuts </a>| <a href="http://sourceforge.net/mail/?group_id=7420" class="bottommenu">mailing
+        list</a> | <a href="FAQ.htm" class="bottommenu">faq</a> | <a href="developers.htm" class="bottommenu">developers</a>
+        | <a href="Links.htm" class="bottommenu">links</a></div>
     </td>
   </tr>
 </table>
