Maintenance release, Win2k bug fixed

--- a/htdocs/downloads.htm
+++ b/htdocs/downloads.htm
@@ -40,6 +40,13 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
+      <p>Version 2.0.2&#151;<b>E</b><b>xperimental</b><b> Maintenance Release</b>&#151;[<a href="distributions/dTV202exe.zip">Binary
+      Zipped</a>] [<a href="distributions/dTV202src.zip">Source Zipped</a>]<br>
+      &nbsp;&nbsp;&nbsp;&nbsp; Bug fixed - Windows 2000 driver code was
+      broken.&nbsp; No other binary changes.<br>
+      &nbsp;&nbsp;&nbsp;&nbsp; Deleted unused temporary files from 2.0.2 source,
+      so source zip is smaller than 2.0.1&nbsp;
+      </p>
       <p>Version 2.0.1&#151;<b>Experimental</b>&#151;[<a href="distributions/dTV201exe.zip">Binary
       Zipped</a>] [<a href="distributions/dTV201src.zip">Source Zipped</a>]<br>
       &nbsp;&nbsp;&nbsp;&nbsp; Numerous changes by Michael of Conexant Systems, Inc.<br>
